syntax = "proto3";

package Auth;

option go_package = "peletor.sso.v1;sso";

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse);

  rpc Login(LoginRequest) returns (LoginResponse);

  rpc IsAdmin(IsAdminRequest) returns (IsAdminResponse);
}

// TODO: service GetUserPermissions
//service Permissions {
//  rpc GetUserPermissions(GetUserPermissionsRequest) returns (UserPermissions);
//}

// TODO: service UserInfo
//service UserInfo {
//  rpc UserInfo(UserInfoRequest) returns (UserInfoResponse);
//}

message RegisterRequest {
  string email = 1; // Email of the user to register
  string password = 2;
}

message RegisterResponse {
  int64 user_id = 1; // User ID of the registered user
}

message LoginRequest {
  string email = 1; // Email of the user to login
  string password = 2;
  int32 app_id = 3; // ID of the app to login to
}

message LoginResponse {
  string token = 1; // Auth token of the logged user
}

message IsAdminRequest {
  int64 user_id = 1; // User ID to validate
}

message IsAdminResponse {
  bool is_admin = 1;
}